crates/printer/src/operation_type_printer/tests/snapshots/nitrogql_printer__operation_type_printer__tests__descriptions.snap
---
source: crates/printer/src/operation_type_printer/tests/mod.rs
expression: printed
---
import type { TypedDocumentNode } from "@graphql-typed-document-node/core";
import type * as Schema from "";

/**
 * Query to get the current user.
 */
type TestQueryResult = Schema.__SelectionSet<Schema.__OperationOutput.Query, {
  me: Schema.__SelectionSet<Schema.__OperationOutput.User, {
    id: Schema.__OperationOutput.ID;
    name: Schema.__OperationOutput.String;
    type: Schema.__OperationOutput.UserType;
    age: Schema.__OperationOutput.Int | null;
  }, {}>;
}, {}>;

type TestQueryVariables = {
  /**
   * ID of the user.
   */
  readonly foo: Schema.__OperationInput.Int;
  /**
   * Name of the user.
   */
  readonly bar?: Schema.__OperationInput.String | null | undefined;
};

/**
 * Query to get the current user.
 */
declare const TestQueryQuery: TypedDocumentNode<TestQueryResult, TestQueryVariables>;

export { TestQueryQuery as default };

/**
 * Fragment to get the ID.
 */
export type F = Schema.__SelectionSet<Schema.__OperationOutput.User, {
  id: Schema.__OperationOutput.ID;
}, {}> | Schema.__SelectionSet<Schema.__OperationOutput.Bot, {
  id: Schema.__OperationOutput.ID;
}, {}> | Schema.__SelectionSet<Schema.__OperationOutput.Post, {
  id: Schema.__OperationOutput.ID;
}, {}> | Schema.__SelectionSet<Schema.__OperationOutput.Tweet, {
  id: Schema.__OperationOutput.ID;
}, {}>;

/**
 * Fragment to get the ID.
 */
export const F: TypedDocumentNode<F, never>;
