crates/printer/src/operation_type_printer/tests/snapshots/nitrogql_printer__operation_type_printer__tests__export_input_and_result_type.snap
---
source: crates/printer/src/operation_type_printer/tests/mod.rs
expression: printed
---
import type { TypedDocumentNode } from "@graphql-typed-document-node/core";
import type * as Schema from "";

export type SampleQueryResult = Schema.__SelectionSet<Schema.Query, {
  me: Schema.__SelectionSet<Schema.User, {
    id: Schema.ID;
    name: Schema.String;
    type: Schema.UserType;
    age: Schema.Int | null;
  }, {}>;
}, {}>;

export type SampleQueryVariables = {};

declare const SampleQueryQuery: TypedDocumentNode<SampleQueryResult, SampleQueryVariables>;

export { SampleQueryQuery as default };


