crates/printer/src/operation_type_printer/tests/snapshots/nitrogql_printer__operation_type_printer__tests__fragment_merging.snap
---
source: crates/printer/src/operation_type_printer/tests/mod.rs
expression: printed
---
import type { TypedDocumentNode } from "@graphql-typed-document-node/core";
import type * as Schema from "";

type Result = Schema.__SelectionSet<Schema.__OperationOutput.Query, {
  me: Schema.__SelectionSet<Schema.__OperationOutput.User, {
    id: Schema.__OperationOutput.ID;
    name: Schema.__OperationOutput.String;
  }, {}>;
}, {}>;

type Variables = {};

declare const Query: TypedDocumentNode<Result, Variables>;

export { Query as default };

export type F = Schema.__SelectionSet<Schema.__OperationOutput.User, {
  id: Schema.__OperationOutput.ID;
}, {}>;

export const F: TypedDocumentNode<F, never>;

export type P = Schema.__SelectionSet<Schema.__OperationOutput.User, {
  name: Schema.__OperationOutput.String;
}, {}>;

export const P: TypedDocumentNode<P, never>;


